--- a/src/Sidebar.css
+++ b/src/Sidebar.css
@@ -4,8 +4,9 @@
     height: 100%;
     border-right: 1px solid rgba(189, 189, 192, 0.1);
     transition: width 0.3s;
+    overflow-y: scroll;
   }
-  
+
   /* not small devices  */
   @media (min-width: 576px) {
     .Sidebar {
