--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,11 @@
+@import url("https://fonts.googleapis.com/css?family=Nunito+Sans:400,700");
+
 body {
   margin: 0;
   padding: 0;
   font-family:  sans-serif;
+  ont-weight: 400;
+  font-family: "Nunito Sans", sans-serif;
 }
 
 #root {
