empty and chat window and combinereducers

--- a/src/index.css
+++ b/src/index.css
@@ -4,7 +4,7 @@ body {
   margin: 0;
   padding: 0;
   font-family:  sans-serif;
-  ont-weight: 400;
+  font-weight: 400;
   font-family: "Nunito Sans", sans-serif;
 }
 
